# cve-2025-49844

./: Dockerfile  LICENSE  README.md  compose.yaml  demonstration.py  main.py  pyproject.toml
dockerfiles/redis-8.2.1-alpine/: Dockerfile  compose.yaml
dockerfiles/redis-8.2.1-bookworm/: Dockerfile
src/cve_2025_49844/: main.py  redis_8_2_1_alpine.py  redis_8_2_1_bookworm.py  shared.py  shellcode.py  util.py
