[project]
name = "cve-2025-49844"
version = "0.1.0"
authors = [{name = "saneki"}]
description = "Proof-of-concept for CVE-2025-49844."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hexdump>=3.3",
    "iced-x86>=1.21.0",
    "redis>=6.4.0",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
]

[project.scripts]
cve-2025-49844 = "cve_2025_49844.main:main"

[tool.uv]
package = true
